--- a/main.html
+++ b/main.html
@@ -40,51 +40,51 @@
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
 
             <figure>
-                <img src="images\Chile.png" alt="*" width="auto">
+                <img src="images/Chile.png" alt="*" >
                 <figcaption>Chile, 2001</figcaption>
             </figure>
             <figure>
-                <img src="images\Guatemala.png" alt="*" width="auto">
+                <img src="images/Guatemala.png" alt="*" >
                 <figcaption>Guatemala, 1997</figcaption>
             </figure>
             <figure>
-                <img src="images\Hawaii.png" alt="*" width="auto">
+                <img src="images/Hawaii.png" alt="*" >
                 <figcaption>Hawaii, 2010</figcaption>
             </figure>
             <figure>
-                <img src="images\Iran.png" alt="*" width="auto">
+                <img src="images/Iran.png" alt="*" >
                 <figcaption>Iran, 1999</figcaption>
             </figure>
             <figure>
-                <img src="images\Ireland.png" alt="*" width="auto">
+                <img src="images/Ireland.png" alt="*" >
                 <figcaption>Ireland, 2012</figcaption>
             </figure>
             <figure>
-                <img src="images\Italy.png" alt="*" width="auto">
+                <img src="images/Italy.png" alt="*" >
                 <figcaption>Italy, 2015</figcaption>
             </figure>
             <figure>
-                <img src="images\Moab-Desert.png" alt="*" width="auto">
+                <img src="images/Moab-Desert.png" alt="*" >
                 <figcaption>Moab Desert, 2020</figcaption>
             </figure>
             <figure>
-                <img src="images\Rocky-Mountains.png" alt="*" width="auto">
+                <img src="images/Rocky-Mountains.png" alt="*" >
                 <figcaption>Rocky Mountains, 2009</figcaption>
             </figure>
             <figure>
-                <img src="images\Switzerland.png" alt="*" width="auto">
+                <img src="images/Switzerland.png" alt="*" >
                 <figcaption>Switzerland, 2014</figcaption>
             </figure>
             <figure>
-                <img src="images\UK.png" alt="*" width="auto">
+                <img src="images/UK.png" alt="*" >
                 <figcaption>UK, 2005</figcaption>
             </figure>
             <figure>
-                <img src="images\USA.png" alt="*" width="auto">
+                <img src="images/USA.png" alt="*" >
                 <figcaption>USA, 2021</figcaption>
             </figure>
             <figure>
-                <img src="images\Wyoming.png" alt="*" width="auto">
+                <img src="images/Wyoming.png" alt="*" >
                 <figcaption>Wyoming, 2021</figcaption>
             </figure>
 
@@ -98,12 +98,12 @@
         <form>
             <h3>Your contact information</h3>
             <label for="name">Name</label><br>
-            <input type="text" id="fname" name="name" placeholder="(Your full name)" required><br>
+            <input type="text" id="name" name="name" placeholder="Your full name" required><br>
             <label for="email">Email</label><br>
-            <input type="text" id="email" name="email" placeholder="(Enter your email address)" required><br>
+            <input type="text" id="email" name="email" placeholder="Enter your email address" required><br>
             <label for="message">Message</label><br>
-            <input type="email" id="email" name="email" placeholder="(What can I help you with?)" required><br>
-            <input type="submit" value="Submit">
+            <input type="text" id="message" name="message" placeholder="What can I help you with?" required><br>
+            <input type="submit" id="button" value="Submit">
         </form>
 
     </section>
