--- a/main.html
+++ b/main.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title><!--ADD TITLE --></title>
+    <title>Photo Gallery: GIT 337 Assignment 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="*"> <!--favicon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="*"> 
     <meta name="author" content="Kevin Janas">
     <meta name="description" content="Assignment 2 //   Photo Gallery GIT337">
     <link href="styles.css" rel="stylesheet">
@@ -20,7 +20,6 @@
                 <li><a href="#Gallery">Gallery</a></li>
                 <li><a href="#Contact">Contact</a></li>
                 <li><a href="#top">top</a></li>
-                <!--Not sure where top exists in the mock. Probably a fixed position in a corner or something-->
             </ul>
         </nav>
     </header>
