--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Photo Gallery: GIT 337 Assignment 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="*"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="*">
     <meta name="author" content="Kevin Janas">
     <meta name="description" content="Assignment 2 //   Photo Gallery GIT337">
     <link href="styles.css" rel="stylesheet">
@@ -27,11 +27,9 @@
     <main>
         <section id="About">
             <h2>About</h2>
+            
             <p>Hello!</p>
-            <p>I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape
-                photography is
-                my
-                speciality and it’s taken me all over the world.</p>
+            <p>I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world.</p>
         </section>
 
         <section id="Gallery">
@@ -39,51 +37,51 @@
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
 
             <figure>
-                <img src="images/Chile.png" alt="*" >
+                <img src="images/Chile.png" alt="*">
                 <figcaption>Chile, 2001</figcaption>
             </figure>
             <figure>
-                <img src="images/Guatemala.png" alt="*" >
+                <img src="images/Guatemala.png" alt="*">
                 <figcaption>Guatemala, 1997</figcaption>
             </figure>
             <figure>
-                <img src="images/Hawaii.png" alt="*" >
+                <img src="images/Hawaii.png" alt="*">
                 <figcaption>Hawaii, 2010</figcaption>
             </figure>
             <figure>
-                <img src="images/Iran.png" alt="*" >
+                <img src="images/Iran.png" alt="*">
                 <figcaption>Iran, 1999</figcaption>
             </figure>
             <figure>
-                <img src="images/Ireland.png" alt="*" >
+                <img src="images/Ireland.png" alt="*">
                 <figcaption>Ireland, 2012</figcaption>
             </figure>
             <figure>
-                <img src="images/Italy.png" alt="*" >
+                <img src="images/Italy.png" alt="*">
                 <figcaption>Italy, 2015</figcaption>
             </figure>
             <figure>
-                <img src="images/Moab-Desert.png" alt="*" >
+                <img src="images/Moab-Desert.png" alt="*">
                 <figcaption>Moab Desert, 2020</figcaption>
             </figure>
             <figure>
-                <img src="images/Rocky-Mountains.png" alt="*" >
+                <img src="images/Rocky-Mountains.png" alt="*">
                 <figcaption>Rocky Mountains, 2009</figcaption>
             </figure>
             <figure>
-                <img src="images/Switzerland.png" alt="*" >
+                <img src="images/Switzerland.png" alt="*">
                 <figcaption>Switzerland, 2014</figcaption>
             </figure>
             <figure>
-                <img src="images/UK.png" alt="*" >
+                <img src="images/UK.png" alt="*">
                 <figcaption>UK, 2005</figcaption>
             </figure>
             <figure>
-                <img src="images/USA.png" alt="*" >
+                <img src="images/USA.png" alt="*">
                 <figcaption>USA, 2021</figcaption>
             </figure>
             <figure>
-                <img src="images/Wyoming.png" alt="*" >
+                <img src="images/Wyoming.png" alt="*">
                 <figcaption>Wyoming, 2021</figcaption>
             </figure>
 
