--- a/index.html
+++ b/index.html
@@ -37,51 +37,51 @@
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
 
             <figure>
-                <img src="images/Chile.png" alt="*">
+                <img src="images/Chile.png" alt="Chile, 2001">
                 <figcaption>Chile, 2001</figcaption>
             </figure>
             <figure>
-                <img src="images/Guatemala.png" alt="*">
+                <img src="images/Guatemala.png" alt="Guatemala, 1997">
                 <figcaption>Guatemala, 1997</figcaption>
             </figure>
             <figure>
-                <img src="images/Hawaii.png" alt="*">
+                <img src="images/Hawaii.png" alt="Hawaii, 2010">
                 <figcaption>Hawaii, 2010</figcaption>
             </figure>
             <figure>
-                <img src="images/Iran.png" alt="*">
+                <img src="images/Iran.png" alt="Iran, 1999">
                 <figcaption>Iran, 1999</figcaption>
             </figure>
             <figure>
-                <img src="images/Ireland.png" alt="*">
+                <img src="images/Ireland.png" alt="Ireland, 2012">
                 <figcaption>Ireland, 2012</figcaption>
             </figure>
             <figure>
-                <img src="images/Italy.png" alt="*">
+                <img src="images/Italy.png" alt="Italy, 2015<">
                 <figcaption>Italy, 2015</figcaption>
             </figure>
             <figure>
-                <img src="images/Moab-Desert.png" alt="*">
+                <img src="images/Moab-Desert.png" alt="Moab Desert, 2020">
                 <figcaption>Moab Desert, 2020</figcaption>
             </figure>
             <figure>
-                <img src="images/Rocky-Mountains.png" alt="*">
+                <img src="images/Rocky-Mountains.png" alt="Rocky Mountains, 2009">
                 <figcaption>Rocky Mountains, 2009</figcaption>
             </figure>
             <figure>
-                <img src="images/Switzerland.png" alt="*">
+                <img src="images/Switzerland.png" alt="Switzerland, 2014">
                 <figcaption>Switzerland, 2014</figcaption>
             </figure>
             <figure>
-                <img src="images/UK.png" alt="*">
+                <img src="images/UK.png" alt="UK, 2005">
                 <figcaption>UK, 2005</figcaption>
             </figure>
             <figure>
-                <img src="images/USA.png" alt="*">
+                <img src="images/USA.png" alt="USA, 2021">
                 <figcaption>USA, 2021</figcaption>
             </figure>
             <figure>
-                <img src="images/Wyoming.png" alt="*">
+                <img src="images/Wyoming.png" alt="Wyoming, 2021">
                 <figcaption>Wyoming, 2021</figcaption>
             </figure>
 
